bin_PROGRAMS = main
main_SOURCES = main.c \
core.c \
core.h \
btree.c \
btree.h \
server.c \
server.h \
ssignal.c \
ssignal.h \
session.c \
session.h \
thread.c \
thread.h \
utils/buffer.c \
utils/buffer.h \
utils/chunk.c \
utils/chunk.h \
utils/inet_base.c \
utils/inet_base.h \
utils/log.c \
utils/log.h \
utils/queue.c \
utils/queue.h \
utils/timer.c \
utils/timer.h

AM_CXXFLAGS = -Wall -lpthread -levbase
